# DocumentCategorizer

./: .env  BaseOpenAIAdapter.py  DocCatBase.py  ImageToTextExtracterAdapter.py  PdftoTextExtracterAdapter.py  app.py  config.py  git.txt  orchestrator.py  prompt.py  pyproject.toml  requirements.txt  testpdf.py  text_openai.py
