[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azureopenai>=0.0.1",
    "dotenv>=0.9.9",
    "frontend>=0.0.3",
    "instructor>=1.14.5",
    "openai>=2.16.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "poppler-utils>=0.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "reportlab>=4.4.9",
    "streamlit>=1.53.1",
    "tools>=1.0.23",
]
